# rtype

./: .gitignore  LICENSE.txt  Makefile  README.md  make.bat  prepare.bat  prepare.sh
Client/: .gitignore  CMakeLists.txt  Makefile  README.md  build-script.bat
Client/Includes/: ClientSceneLoader.hpp  Difficulty.hpp  Game.hpp  GameEngineIncludesClient.hpp  NetClient.hpp
Client/Src/: ClientSceneLoader.cpp  Game.cpp  NetClient.cpp  main.cpp
Client/config/: client-config.json
GameEngine/: .gitignore  README.md
GameEngine/include/: DenseIterator.hpp  Entity.hpp  IndexedZipper.hpp  IndexedZipperIterator.hpp  MoveOnlyFunction.hpp  Registry.hpp  SparseArray.hpp  Storage.hpp  StorageIterator.hpp  Zipper.hpp  ZipperIterator.hpp
GameEngine/include/component/: Acceleration.hpp  Animated.hpp  Button.hpp  Camera.hpp  Collision.hpp  DrawableCmp.hpp  Gravity.hpp  HUD.hpp  Health.hpp  Input.hpp  Jump.hpp  Mouse.hpp  MusicSource.hpp  NamedFrames.hpp  RectangleRender.hpp  Red.hpp  Script.hpp  SoundSource.hpp  Spawner.hpp  SpriteRender.hpp  StarField.hpp  TextCmp.hpp  TimerContainer.hpp  Transformable.hpp  UUID.hpp  Velocity.hpp
GameEngine/include/system/: AnimationSystem.hpp  ButtonSystem.hpp  CameraSystem.hpp  ClockSystem.hpp  CollisionSystem.hpp  DrawSystem.hpp  GravitySystem.hpp  HealthSystem.hpp  InputSystem.hpp  JumpSystem.hpp  MouseSystem.hpp  MusicSystem.hpp  NamedFramesSystem.hpp  ScriptSystem.hpp  SpawnerSystem.hpp  StarFieldSystem.hpp  TransformSystem.hpp
GameEngine/include/utils/: Assert.hpp  AssetManager.hpp  JsonHandler.hpp  Math.hpp  StringHash.hpp  TestError.hpp  UUIDManager.hpp  Using.hpp  Vec2.hpp  utils.hpp
GameEngine/include/wrapper/: IGraphicalLibraryWrapper.hpp  RaylibWrapper.hpp
GameEngine/src/: Entity.cpp  Registry.cpp
GameEngine/src/system/: AnimationSystem.cpp  ButtonSystem.cpp  CameraSystem.cpp  ClockSystem.cpp  CollisionSystem.cpp  DrawSystem.cpp  GravitySystem.cpp  HealthSystem.cpp  InputSystem.cpp  JumpSystem.cpp  MouseSystem.cpp  MusicSystem.cpp  NamedFramesSystem.cpp  ScriptSystem.cpp  SpawnerSystem.cpp  StarFieldSystem.cpp  TransformSystem.cpp
GameEngine/src/utils/: Assert.cpp  AssetManager.cpp  JsonHandler.cpp  Math.cpp  UUIDManager.cpp  Vec2.cpp
GameEngine/src/wrapper/: RaylibWrapper.cpp
Network/Includes/: BitConverter.hpp  INetwork.hpp  NetworkReponse.hpp  TCPNetwork.hpp  UDPNetwork.hpp
Network/Src/: TCPNetwork.cpp  UDPNetwork.cpp
OtherGame/: .gitignore  CMakeLists.txt  Makefile
OtherGame/Includes/: CustomComponents.hpp  GameEngineIncludesList.hpp  SceneLoader.hpp
OtherGame/Src/: SceneLoader.cpp  main.cpp
OtherGame/config/: config.json
Server/: .gitignore  CMakeLists.txt  README.md  build-script.bat
Server/Includes/: CustomComponents.hpp  Difficulty.hpp  Game.hpp  GameEngineIncludesServer.hpp  NetServer.hpp  ServerSceneLoader.hpp
Server/Src/: Game.cpp  NetServer.cpp  ServerSceneLoader.cpp  main.cpp
Server/config/: server-config.json
Server/scripts/: brain_enemy_system.py
